--- a/src/main/resources/Fxml/addquestion.fxml
+++ b/src/main/resources/Fxml/addquestion.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="700.0" prefWidth="1000.0" stylesheets="css/styles.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.AddQuestionController">
+<AnchorPane prefHeight="700.0" prefWidth="1000.0" stylesheets="@../css/styles.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.AddQuestionController">
     <children>
         <Pane layoutX="101.0" layoutY="8.0" prefHeight="319.0" prefWidth="399.0" styleClass="eco-card">
             <children>
