--- a/src/main/resources/showPostAdminController.fxml
+++ b/src/main/resources/showPostAdminController.fxml
@@ -1,27 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Separator?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
-
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.ComboBox?>
-<AnchorPane id="AnchorPane" prefHeight="713.0" prefWidth="1219.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.controller.dashboard">
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.text.Font?>
+<AnchorPane fx:controller="edu.esprit.controller.showPostAdminController" stylesheets="@stylesheet.css" xmlns:fx="http://javafx.com/fxml/1">
+    <TextField fx:id="tfSearch"/>
+    <AnchorPane layoutX="375.0" layoutY="15.0" prefHeight="120.0" prefWidth="191.0" style="-fx-border-radius: 0px 50px 0px 0px; -fx-border-color: #F1F2F7;">
+        <effect>
+            <DropShadow color="#9a9696" />
+        </effect>
+        <children>
+            <ImageView fitHeight="44.0" fitWidth="60.0" layoutX="24.0" layoutY="25.0" pickOnBounds="true" preserveRatio="true">
+                <image>
+                    <Image url="https://static.vecteezy.com/system/resources/previews/023/234/824/non_2x/pdf-icon-red-and-white-color-for-free-png.png" />
+                </image>
+            </ImageView>
+            <Label alignment="CENTER" layoutX="27.0" layoutY="79.0" text="Project Summary" textFill="#2262c6">
+                <font>
+                    <Font name="Berlin Sans FB" size="14.0" />
+                </font>
+            </Label>
+        </children>
+    </AnchorPane>
+<AnchorPane id="AnchorPane" fx:id="anchorPane" layoutX="30.0" layoutY="90" prefHeight="580.0" prefWidth="919.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" >
     <children>
-        <Label layoutX="19.0" layoutY="17.0" prefHeight="29.0" prefWidth="207.0" styleClass="header-label" text="Posts Review" />
-        <Separator layoutX="10.0" layoutY="55.0" prefHeight="10" prefWidth="1213.0" />
-        <TextField fx:id="tfSearch" prefHeight="31.0" prefWidth="173.0" promptText="Search" style="-fx-background-color: black;" />
 
-        <Separator layoutX="3.0" layoutY="55.0" prefHeight="4.0" prefWidth="1213.0" />
-        <ScrollPane layoutX="38.0" layoutY="84.0" prefHeight="564.0" prefWidth="1164.0">
-            <content>
-                <VBox spacing="20.0" fx:id="vboxdash">
-                    <!-- Your Posts will be added here -->
-                </VBox>
-            </content>
-        </ScrollPane>
     </children>
+</AnchorPane>
 </AnchorPane>
