--- a/src/main/resources/Reclamation/ReclamationList.fxml
+++ b/src/main/resources/Reclamation/ReclamationList.fxml
@@ -7,11 +7,19 @@
 <?import javafx.scene.layout.HBox?>
 
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.image.Image?>
 <AnchorPane prefHeight="700.0" prefWidth="800.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.controller.Reclamation.ReclamationListController">
     <!-- Header with darker blue background -->
+    <!-- Header Section -->
+    <HBox alignment="CENTER_LEFT" prefHeight="56.0" prefWidth="1080.0" spacing="20.0">
+        <!-- Navigation Buttons and Search Bar -->
+
+        <!-- Additional UI components can be added here -->
+    </HBox>
     <children>
     <!-- Left panel for Dashboard -->
-    <fx:include source="/Dashboard.fxml" />
+    <fx:include source="/UserDashboard.fxml" />
         <VBox layoutX="10.0" layoutY="50.0" prefHeight="600.0" prefWidth="160.0">
             <children>
                 <!-- Ajoutez des éléments de dashboard ici -->
