--- a/src/main/resources/Fxml/Questions.fxml
+++ b/src/main/resources/Fxml/Questions.fxml
@@ -1,62 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="948.0" prefWidth="1335.0" stylesheets="@../css/style1.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.ShowQuestionController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="900.0" stylesheets="@../css/style1.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.ShowQuestionController">
     <children>
         <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="948.0" prefWidth="1335.0" styleClass="primary_color" stylesheets="@../css/style1.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
             <left>
                 <VBox prefHeight="200.0" prefWidth="235.0" spacing="20.0" styleClass="secondary-color" stylesheets="@../css/style1.css" BorderPane.alignment="CENTER">
                     <children>
-                        <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
-                            <image>
-                                <Image url="https://static.vecteezy.com/ti/vecteur-libre/p3/9124661-jfx-logo-jfx-letter-jfx-letter-logo-design-initials-jfx-logo-linked-with-circle-and-uppercase-monogram-logo-jfx-typography-for-technology-business-and-real-marque-immobilier-vectoriel.jpg" />
-                            </image>
-                            <VBox.margin>
-                                <Insets left="20.0" top="20.0" />
-                            </VBox.margin>
-                        </ImageView>
-                        <VBox prefHeight="182.0" prefWidth="235.0" spacing="10.0">
+                        <VBox prefHeight="182.0" prefWidth="235.0" spacing="10.0" style="-fx-padding: 10;" VBox.vgrow="ALWAYS">
                             <children>
                                 <HBox alignment="CENTER" prefHeight="50.0" prefWidth="200.0" spacing="20.0" styleClass="selected" stylesheets="@../css/style1.css">
                                     <children>
-                                        <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
-                                            <image>
-                                                <Image url="https://static.vecteezy.com/ti/vecteur-libre/p3/9124661-jfx-logo-jfx-letter-jfx-letter-logo-design-initials-jfx-logo-linked-with-circle-and-uppercase-monogram-logo-jfx-typography-for-technology-business-and-real-marque-immobilier-vectoriel.jpg" />
-                                            </image>
-                                        </ImageView>
-                                        <Label prefHeight="21.0" prefWidth="101.0" text="Home" textFill="WHITE">
+                                        <Label prefHeight="27.0" prefWidth="62.0" text="Home" textFill="WHITE">
                                             <font>
                                                 <Font name="System Bold" size="18.0" />
                                             </font>
                                         </Label>
                                     </children>
                                 </HBox>
-                                <HBox alignment="CENTER" prefHeight="50.0" prefWidth="200.0" spacing="20.0">
-                                    <children>
-                                        <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
-                                            <image>
-                                                <Image url="https://static.vecteezy.com/ti/vecteur-libre/p3/9124661-jfx-logo-jfx-letter-jfx-letter-logo-design-initials-jfx-logo-linked-with-circle-and-uppercase-monogram-logo-jfx-typography-for-technology-business-and-real-marque-immobilier-vectoriel.jpg" />
-                                            </image>
-                                        </ImageView>
-                                    </children>
-                                </HBox>
+                                  <Button fx:id="btn_ask" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#handleask" prefHeight="37.0" prefWidth="214.0" style="-fx-background-color: #1ED760;" text="Ask" textAlignment="CENTER" textFill="WHITE" textOverrun="CENTER_ELLIPSIS" translateY="600.0" wrapText="true">
+                                      <font>
+                                          <Font name="System Bold" size="26.0" />
+                                      </font>
+                                  </Button>
+
                             </children>
                         </VBox>
                     </children>
                 </VBox>
             </left>
+
             <center>
-                <ListView fx:id="listView" BorderPane.alignment="CENTER" />
+                <ListView fx:id="listView" prefHeight="802.0" prefWidth="874.0" BorderPane.alignment="CENTER" />
             </center>
         </BorderPane>
     </children>
