--- a/src/main/resources/css/styles.css
+++ b/src/main/resources/css/styles.css
@@ -1,17 +1,24 @@
-.root {
-    -fx-font-family: "Arial";
-    -fx-base: rgb(132, 145, 47);
-    -fx-background: rgb(225, 228, 203);
+.primary-color {
+    -fx-background-color: #1f1f1f;
 }
 
+.secondary-color {
+    -fx-background-color: #121212;
+}
+
+.root {
+    -fx-font-family: "Arial";
+    -fx-base: rgb(255, 255, 255);
+    -fx-background-color: linear-gradient(to bottom, #1f1f1f, #121212); /* Use primary and secondary colors for the background */
+}
 .button {
     -fx-text-fill: white;
-    -fx-background-color: linear-gradient(#61a2b1, #2A5058);
+    -fx-background-color: linear-gradient(#1ED760, #1ED760);
     -fx-padding: 10;
 }
 
 .button:hover {
-    -fx-background-color: linear-gradient(#2A5058, #61a2b1);
+    -fx-background-color: linear-gradient(#1ED760, #1ED760);
 }
 
 .text-field, .text-area {
@@ -21,7 +28,7 @@
 }
 
 .label {
-    -fx-text-fill: #2A5058;
+    -fx-text-fill: #ffffff;
 }
 
 .back-button {
