--- a/src/main/resources/com/codewarrior/markets_coupons/displayMarket-view.fxml
+++ b/src/main/resources/com/codewarrior/markets_coupons/displayMarket-view.fxml
@@ -67,6 +67,7 @@
          <Label fx:id="controlAddress" layoutX="61.0" layoutY="228.0" prefHeight="24.0" prefWidth="257.0" />
          <Label fx:id="controllRegion" layoutX="390.0" layoutY="149.0" prefHeight="24.0" prefWidth="257.0" textFill="RED" />
          <Label fx:id="controllZipCode" layoutX="390.0" layoutY="228.0" prefHeight="24.0" prefWidth="257.0" textFill="RED" />
+         <Label layoutX="532.0" layoutY="371.0" prefHeight="33.0" prefWidth="180.0" text="Powred By CodeWarriors" />
       </children>
    </Pane>
 </AnchorPane>
