--- a/src/main/resources/com/codewarrior/markets_coupons/hello-view.fxml
+++ b/src/main/resources/com/codewarrior/markets_coupons/hello-view.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="mainAncher" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="535.0" prefWidth="786.0" style="-fx-background-color: SLATEGRAY;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.codewarrior.markets_coupons.controller.RootController">
+<AnchorPane fx:id="mainAncher" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="537.0" prefWidth="791.0" style="-fx-background-color: SLATEGRAY;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.codewarrior.markets_coupons.controller.RootController">
    <children>
       <Pane layoutX="-3.0" style="-fx-background-color: black;">
          <children>
@@ -17,6 +17,7 @@
                   <Image url="@../../../images/b9f24373-ccfb-4b57-949c-c78b0d6de533.jpeg" />
                </image>
             </ImageView>
+            <Label layoutX="234.0" layoutY="14.0" prefHeight="33.0" prefWidth="180.0" text="Powred By CodeWarriors" textFill="WHITE" />
          </children>
       </Pane>
       <Line endX="-100.0" endY="447.0" layoutX="561.0" layoutY="46.0" startX="-100.0" />
