--- a/src/main/resources/com/codewarrior/markets_coupons/market-view.fxml
+++ b/src/main/resources/com/codewarrior/markets_coupons/market-view.fxml
@@ -98,5 +98,6 @@
             </Pane>
             </children>
         </Pane>
+      <Label layoutX="782.0" layoutY="639.0" prefHeight="24.0" prefWidth="180.0" text="Powred By CodeWarriors" />
     </children>
 </AnchorPane>
