--- a/src/main/resources/com/codewarrior/markets_coupons/displayVoucher-view.fxml
+++ b/src/main/resources/com/codewarrior/markets_coupons/displayVoucher-view.fxml
@@ -65,14 +65,14 @@
     <Pane layoutX="26.0" layoutY="410.0" prefHeight="427.0" prefWidth="485.0">
         <children>
             <TextField fx:id="updateValue" layoutX="32.0" layoutY="38.0" prefHeight="24.0" prefWidth="221.0" promptText="Voucher's value" />
-         <DatePicker layoutX="273.0" layoutY="38.0" />
-         <CheckBox layoutX="98.0" layoutY="112.0" mnemonicParsing="false" text="validity" />
-         <CheckBox layoutX="98.0" layoutY="154.0" mnemonicParsing="false" text="owned By" />
-         <ComboBox layoutX="263.0" layoutY="118.0" prefWidth="150.0" promptText="usability" />
-         <ComboBox layoutX="32.0" layoutY="232.0" prefWidth="150.0" promptText="User" />
-         <ComboBox layoutX="263.0" layoutY="232.0" prefWidth="150.0" promptText="Category" />
-         <ComboBox layoutX="36.0" layoutY="302.0" prefWidth="150.0" promptText="Market" />
-         <TextField layoutX="243.0" layoutY="302.0" promptText="type ..." />
+         <DatePicker fx:id="updatedDate" layoutX="273.0" layoutY="38.0" />
+         <CheckBox fx:id="updatedValidBox" layoutX="98.0" layoutY="112.0" mnemonicParsing="false" text="validity" />
+         <CheckBox fx:id="updatedOwnedByBox" layoutX="98.0" layoutY="154.0" mnemonicParsing="false" text="owned By" />
+         <ComboBox fx:id="updatedUsabilityBox" layoutX="263.0" layoutY="118.0" prefWidth="150.0" promptText="usability" />
+         <ComboBox fx:id="updatedUserBox" layoutX="32.0" layoutY="232.0" prefWidth="150.0" promptText="User" />
+         <ComboBox fx:id="updatedCategoryBox" layoutX="263.0" layoutY="232.0" prefWidth="150.0" promptText="Category" />
+         <ComboBox fx:id="updatedMarketBox" layoutX="36.0" layoutY="302.0" prefWidth="150.0" promptText="Market" />
+         <TextField fx:id="updatedTypeField" layoutX="243.0" layoutY="302.0" promptText="type ..." />
         </children>
     </Pane>
    <Label layoutX="1198.0" layoutY="878.0" prefHeight="33.0" prefWidth="180.0" text="Powred By CodeWarriors" />
