--- a/src/main/resources/user/forgetPassword.fxml
+++ b/src/main/resources/user/forgetPassword.fxml
@@ -4,7 +4,6 @@
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -29,6 +28,11 @@
    <center>
       <VBox alignment="TOP_CENTER" prefWidth="452.0" spacing="5.0" BorderPane.alignment="CENTER">
          <children>
+            <Label fx:id="forgetMessageLabel" maxWidth="350.0" prefHeight="0.0" prefWidth="350.0" textAlignment="CENTER" textFill="#e83838">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
             <VBox maxWidth="350.0" spacing="5.0">
                <children>
                   <Label prefHeight="0.0" prefWidth="350.0" text="Email">
@@ -36,37 +40,13 @@
                         <Font size="16.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="emailField" maxWidth="350.0" prefHeight="40.0" prefWidth="350.0" promptText="email" />
-                  <VBox fx:id="emailErrorsContainer" maxWidth="350.0" prefHeight="10.0" prefWidth="350.0" />
+                  <TextField fx:id="forgetEmailField" maxWidth="350.0" prefHeight="40.0" prefWidth="350.0" promptText="email" />
+                  <VBox fx:id="emailErrorsContainer" maxWidth="350.0" prefHeight="0.0" prefWidth="350.0" />
                </children>
             </VBox>
-            <VBox maxWidth="350.0" prefWidth="350.0" spacing="5.0">
-               <children>
-                  <HBox maxHeight="10.0" prefWidth="350.0">
-                     <children>
-                        <Label prefHeight="26.0" prefWidth="255.0" text="Password">
-                           <font>
-                              <Font size="16.0" />
-                           </font>
-                        </Label>
-                        <Label contentDisplay="RIGHT" onMouseClicked="#openForgotPasswordPage" prefHeight="26.0" prefWidth="97.0" text="Forgot password?" textAlignment="RIGHT" textFill="#fa1515" underline="true">
-                           <cursor>
-                              <Cursor fx:constant="HAND" />
-                           </cursor></Label>
-                     </children>
-                  </HBox>
-                  <PasswordField fx:id="passwordField" maxWidth="350.0" prefHeight="40.0" prefWidth="350.0" promptText="Password" />
-                  <VBox fx:id="passwordErrorsContainer" maxWidth="350.0" prefHeight="0.0" prefWidth="350.0" />
-               </children>
-            </VBox>
-            <Label fx:id="loginMessageLabel" maxWidth="350.0" prefHeight="26.0" prefWidth="350.0" textAlignment="CENTER" textFill="#e83838">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
             <VBox maxWidth="350.0" spacing="5.0">
                <children>
-                  <Button fx:id="loginButton" mnemonicParsing="false" onAction="#login" prefHeight="40.0" prefWidth="350.0" style="-fx-background-color: #e84e46;" text="Log in" textFill="WHITE">
+                  <Button fx:id="forgetButton" mnemonicParsing="false" onAction="#handleForgotPassword" prefHeight="40.0" prefWidth="350.0" style="-fx-background-color: #e84e46;" text="Send" textFill="WHITE">
                      <font>
                         <Font size="16.0" />
                      </font>
@@ -79,18 +59,17 @@
                   </Button>
                   <HBox alignment="CENTER" spacing="1.0">
                      <children>
-                        <Label text="Dont have an account?" />
-                        <Label onMouseClicked="#openRegistration" text="Register" textFill="#e84e46">
-                           <cursor>
-                              <Cursor fx:constant="HAND" />
-                           </cursor></Label>
+                        <Label text="Forget password code will be sent to this email">
+                           <HBox.margin>
+                              <Insets top="5.0" />
+                           </HBox.margin></Label>
                      </children>
                   </HBox>
                </children>
             </VBox>
          </children>
          <BorderPane.margin>
-            <Insets top="150.0" />
+            <Insets top="160.0" />
          </BorderPane.margin>
       </VBox>
    </center>
