--- a/src/main/resources/showPostAdminController.fxml
+++ b/src/main/resources/showPostAdminController.fxml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.effect.DropShadow?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
-<AnchorPane fx:controller="edu.esprit.controller.showPostAdminController" stylesheets="@stylesheet.css" xmlns:fx="http://javafx.com/fxml/1">
-    <TextField fx:id="tfSearch"/>
+
+<AnchorPane stylesheets="@stylesheet.css" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/21" fx:controller="edu.esprit.controller.showPostAdminController">
+    <TextField fx:id="tfSearch" />
     <AnchorPane layoutX="375.0" layoutY="15.0" prefHeight="120.0" prefWidth="191.0" style="-fx-border-radius: 0px 50px 0px 0px; -fx-border-color: #F1F2F7;">
         <effect>
             <DropShadow color="#9a9696" />
@@ -26,9 +28,6 @@
             </Label>
         </children>
     </AnchorPane>
-<AnchorPane id="AnchorPane" fx:id="anchorPane" layoutX="30.0" layoutY="90" prefHeight="580.0" prefWidth="919.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" >
-    <children>
-
-    </children>
-</AnchorPane>
+    <ScrollPane prefHeight="1000.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1"> <content> <AnchorPane id="AnchorPane" fx:id="anchorPane" prefHeight="630.0" prefWidth="1037.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1"> <!-- Contenu de votre AnchorPane --> </AnchorPane> </content>
+    </ScrollPane>
 </AnchorPane>
