--- a/src/main/resources/afficherPostgroup.fxml
+++ b/src/main/resources/afficherPostgroup.fxml
@@ -13,11 +13,11 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="665.0" prefWidth="875.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.controller.afficherPostgroup">
+<AnchorPane prefHeight="719.0" prefWidth="981.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.controller.afficherPostgroup">
     <children>
-        <VBox layoutX="-2.0" layoutY="7.0" prefHeight="658.0" prefWidth="869.0" styleClass="card" stylesheets="@style/styleafficher.css">
+        <VBox layoutY="-12.0" prefHeight="732.0" prefWidth="1297.0" styleClass="card" stylesheets="@style/styleafficher.css">
             <children>
-                <HBox prefHeight="118.0" prefWidth="707.0">
+                <HBox prefHeight="188.0" prefWidth="878.0">
                     <children>
                         <Button fx:id="buttonretour" onAction="#handlesponsorButtonClick">
                             <graphic>
@@ -32,11 +32,11 @@
                             </HBox.margin>
                         </Button>
 
-                        <HBox prefHeight="113.0" prefWidth="354.0" styleClass="card" stylesheets="@style/styleafficher.css">
+                        <HBox prefHeight="175.0" prefWidth="770.0" styleClass="card" stylesheets="@style/styleafficher.css">
                             <children>
-                                <VBox prefHeight="70.0" prefWidth="294.0" styleClass="card" stylesheets="@style/styleafficher.css">
+                                <VBox prefHeight="114.0" prefWidth="735.0" styleClass="card" stylesheets="@style/styleafficher.css">
                                     <children>
-                                        <Label fx:id="sponsoringLabel" alignment="BOTTOM_LEFT" prefHeight="65.0" prefWidth="260.0">
+                                        <Label fx:id="sponsoringLabel" alignment="BOTTOM_LEFT" prefHeight="54.0" prefWidth="744.0">
                                             <font>
                                                 <Font name="Cambria Math" size="36.0" />
                                             </font>
@@ -50,22 +50,14 @@
                         </HBox>
                     </children>
                 </HBox>
-                <HBox prefHeight="106.0" prefWidth="763.0" stylesheets="@style/styleafficher.css">
+                <HBox prefHeight="108.0" prefWidth="1178.0" stylesheets="@style/styleafficher.css">
                     <children>
-                        <ImageView fitHeight="35.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
-                            <HBox.margin>
-                                <Insets left="30.0" top="5.0" />
-                            </HBox.margin>
-                            <image>
-                                <Image url="@images/profil.png" />
-                            </image>
-                        </ImageView>
-                        <TextField fx:id="sasie1" prefHeight="26.0" prefWidth="445.0" promptText="write something" stylesheets="@style/styleafficher.css">
+                        <TextField fx:id="sasie1" prefHeight="26.0" prefWidth="696.0" promptText="write something" stylesheets="@style/styleafficher.css">
                             <HBox.margin>
                                 <Insets left="50.0" top="20.0" />
                             </HBox.margin>
                         </TextField>
-                        <Button fx:id="ajouter1" mnemonicParsing="false" onAction="#ajouterPostgroup" prefHeight="26.0" prefWidth="103.0" styleClass="poste-button" stylesheets="@style/styleafficher.css" text="poster" textFill="#fffafa">
+                        <Button fx:id="ajouter1" mnemonicParsing="false" onAction="#ajouterPostgroup" prefHeight="27.0" prefWidth="195.0" styleClass="poste-button" stylesheets="@style/styleafficher.css" text="poster" textFill="#fffafa">
                             <HBox.margin>
                                 <Insets top="20.0" />
                             </HBox.margin>
@@ -77,7 +69,7 @@
                     </styleClass>
                 </HBox>
                 <ScrollPane fitToWidth="true">
-                <VBox fx:id="postbox" prefHeight="254.0" prefWidth="692.0" styleClass="post-card">
+                <VBox fx:id="postbox" prefHeight="338.0" prefWidth="894.0" styleClass="post-card">
                     <!-- Les posts seront affichés ici -->
                     <!-- Ajoutez le TextField et le Button pour les commentaires dans la boucle for de la méthode afficherPostsSponsoring -->
                 </VBox>
