--- a/src/main/resources/showsponsoring.fxml
+++ b/src/main/resources/showsponsoring.fxml
@@ -4,9 +4,9 @@
 <?import javafx.scene.layout.*?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.controller.showSponsoring">
-    <VBox alignment="CENTER" layoutX="6.0" layoutY="-24.0" prefHeight="515.0" prefWidth="951.0" stylesheets="@style/styleafficher.css" xmlns:fx="http://javafx.com/fxml">
+    <VBox alignment="CENTER" layoutX="125.0" layoutY="-18.0" prefHeight="734.0" prefWidth="725.0" stylesheets="@style/styleafficher.css" xmlns:fx="http://javafx.com/fxml">
         <Label style="-fx-font-size: 24px; -fx-font-weight: bold;" text="List Sponsoring" />
-        <Button fx:id="buttonajouter" mnemonicParsing="false" onAction="#handlesponsorButtonClick" styleClass="post-card" text="ADD NEW SPONSOR" />
-        <ListView fx:id="sponsoringListView" prefHeight="410.0" prefWidth="951.0" />
+        <Button fx:id="buttonajouter" mnemonicParsing="false" onAction="#handlesponsorButtonClick" text="ADD NEW SPONSOR" />
+        <ListView fx:id="sponsoringListView" prefHeight="632.0" prefWidth="951.0" />
     </VBox>
 </AnchorPane>
