--- a/src/main/resources/addPost.fxml
+++ b/src/main/resources/addPost.fxml
@@ -77,7 +77,7 @@
                   <VBox prefHeight="200.0" prefWidth="100.0" />
                </children>
             </HBox>
-      <WebView fx:id="mapView" layoutX="470.0" layoutY="132.0" prefHeight="307.0" prefWidth="388.0" />
+        <WebView fx:id="mapWebView" layoutX="350.0" layoutY="100.0" prefHeight="500.0" prefWidth="700.0" styleClass="map" />
       </children>
     </Pane>
   </children>
