--- a/src/main/resources/Avertissement/ListAvertissement.fxml
+++ b/src/main/resources/Avertissement/ListAvertissement.fxml
@@ -9,7 +9,9 @@
 <?import javafx.scene.text.Text?>
 
 <?import javafx.scene.layout.HBox?>
-<AnchorPane prefHeight="700.0" prefWidth="1000.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.controller.Avertissement.ListAvertissementController">
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Button?>
+<AnchorPane prefHeight="700.0" prefWidth="1000.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" stylesheets="@style.css" fx:controller="edu.esprit.controller.Avertissement.ListAvertissementController">
 
    <children>
       <fx:include source="/Dashboard.fxml"/>
@@ -20,7 +22,8 @@
       </VBox>
 
       <!-- Barre de recherche repositionnée pour s'adapter à la nouvelle disposition -->
-      <TextField fx:id="searchField" layoutX="296.0" layoutY="105.0" onKeyReleased="#filtrerAvertissements" prefHeight="26.0" prefWidth="777.0" promptText="Rechercher par nom d'utilisateur..." />
+      <TextField fx:id="searchField" layoutX="296.0" layoutY="105.0" prefHeight="26.0" prefWidth="777.0" promptText="Rechercher par nom d'utilisateur..." styleClass="text-field" onKeyReleased="#filtrerAvertissements" />
+
 
       <!-- ListView repositionné à droite -->
       <ListView fx:id="avertissementListView" layoutX="296.0" layoutY="144.0" prefHeight="554.0" prefWidth="986.0">
